Paper Structure Update

--- a/paper/mitb-ai.tex
+++ b/paper/mitb-ai.tex
@@ -72,26 +72,27 @@
 %%% authors and their email address(es). If so desired, you can specify
 %%% author contributions using the \footnote{} command.
 
-\author[A]{\fnms{Daniel}~\snm{James}\orcid{....-....-....-....}\thanks{Corresponding Author. Email: danieljames.2023@mitb.smu.edu.sg.}}
+\author[A]
+{\fnms{Daniel}~\snm{James}}
 
 \author[A]
-{\fnms{Leonardo}\orcid{....-....-....-....}\thanks{Corresponding Author. Email: leonardo.2023@mitb.smu.edu.sg.}}
+{\fnms{Leonardo}}
 
 \author[A]
-{\fnms{Jing Shen}~\snm{Tai}\orcid{....-....-....-....}\thanks{Corresponding Author. Email: js.tai.2023@mitb.smu.edu.sg.}}
+{\fnms{Jing Shen}~\snm{Tai}}
 
 \author[A]
-{\fnms{Valerian}~\snm{Yap}\orcid{....-....-....-....}\thanks{Corresponding Author. Email: valerianyap.2023@mitb.smu.edu.sg.}}
+{\fnms{Valerian}~\snm{Yap}}
 
 \author[A]
-{\fnms{Hoong Chuin}~\snm{Lau}\orcid{....-....-....-....}\thanks{Corresponding Author. Email: hclau@smu.edu.sg.}}
+{\fnms{Hoong Chuin}~\snm{Lau}\thanks{Corresponding Author. Email: hclau@smu.edu.sg.}}
 
 \address[A]{School of Computing and Information Systems, Singapore Management University}
 
 %%% Use this environment to include an abstract of your paper.
 
 \begin{abstract}
-This paper presents a combined approach of Large Language Model (LLM) and Operation Research (OR) to develop an optimized travel planner for tourists visiting Singapore. Recognizing that traveler preferences vary significantly across demographics, we aim to generate customized itineraries that balance cost, travel time and personal satisfaction. We apply LLM agents to convert traveler's preferences in text format into a structured format that can be used for optimization. For optimization, we apply Adaptive Large Neighborhood Search (ALNS) with data enrichment techniques such as route matrix from Google Maps API to find out duration and price from point A to point B. Our contribution is the ability to make more-realistic itineraries, putting distance and cost into perspective, while focusing on traveler's best interest to minimize expenses and maximize satisfaction. We benchmarked against ... . Our approach ..., demonstrating the power of leveraging strengths of both LLM and ALNS in solving this problem.
+\textbf{!!!! 150-200 WORDS MAX} This paper presents a combined approach of Large Language Model (LLM) and Operation Research (OR) to develop an optimized travel planner for tourists visiting Singapore. Recognizing that traveler preferences vary significantly across demographics, we aim to generate customized itineraries that balance cost, travel time and personal satisfaction. We apply LLM agents to convert traveler's preferences in text format into a structured format that can be used for optimization. For optimization, we apply Adaptive Large Neighborhood Search (ALNS) with data enrichment techniques such as route matrix from Google Maps API to find out duration and price from point A to point B. Our contribution is the ability to make more-realistic itineraries, putting distance and cost into perspective, while focusing on traveler's best interest to minimize expenses and maximize satisfaction. We benchmarked against ... . Our approach ..., demonstrating the power of leveraging strengths of both LLM and ALNS in solving this problem.
 
 \end{abstract}
 
@@ -115,12 +116,31 @@ This study is geographically and thematically scoped to the context of Singapore
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Related Work}
-Recent research highlights the growing synergy between LLMs and traditional optimization methods in itinerary planning.
+\section{System Overview}
+% are you sure this should be double-column?
+\begin{figure*}[h]
+    \centering
+    \includegraphics[width=1\textwidth]{6098288248590812104.jpg}
+    \caption{Multi-Agent Architecture}
+    \label{fig:Workflow Diagram}
+\end{figure*}
+% TODO:
+%   - Fix Placement
+%   - Arrow back goes to visualization, not going to the top again
+- architecture diagram, techniques used, user interface
+- mention ALNS, how it's used to generate (only the) initial itinerary
+    - don't need to describe the details
 
-For example, \textit{TRIP-PAL: Trip Planning with Guarantees by Combining LLMs and Automated Planners} (JP Morgan AI Research, 2024) explores how LLMs can be integrated with formal planning algorithms such as A* to produce reliable trip plans. This study shows that LLMs are capable of translating natural language inputs into structured formats compatible with optimization algorithms commonly used in operations research.
+\section{Innovation and Technical Contribution}
+\subsection{LLM and Multi-Agent Framework}
+\textbf{!!! SHORTEN} Although LLMs are highly capable at interpreting and generating human-like text, they are passive systems—limited to single-turn type of interaction without persistent memory. This presents clear limitations when applied to travel itinerary planning, a task that requires structured decision-making, retrieval of external data (e.g., Google ratings, Cost of Attraction Entrance Fees), and context tracking across multiple steps. A passive LLM may generate a generic itinerary but lacks the capability to provide personalization such as “I prefer scenic routes” or “maximize shopping time within budget.”
 
-Similarly, \textit{Optimizing Travel Itineraries with AI Algorithms in a Microservices Architecture: Balancing Cost, Time, Preferences, and Sustainability} (Barua \& Kaiser, 2024) demonstrates how LLMs can support personalization within a modular microservices framework, enabling the coordination of multiple optimization objectives such as budget, travel time, user preferences, and sustainability.
+To bridge this gap, we extend LLMs into autonomous agents by integrating three key capabilities: tool-calling (e.g., invoking Google Maps APIs), memory (to retain user goals and prior decisions), and Retrieval Augmented Generation (RAG) for incorporating external data into the reasoning process. This turns the LLM from a reactive text generator into a goal-driven planner capable of making informed decisions. Our system adopts this Agentic RAG architecture to retrieve attraction details, estimating hawker visit durations, and enrich itinerary planning with contextual knowledge beyond the LLM’s static knowledge from pre-training.
+
+While a single agent can technically handle the entire itinerary pipeline, research has also shown that such monolithic setups often struggle with domain specialization. To address the limitation, we extend our architecture into a multi-agent framework where each agent focuses on a well-scoped domain task.
+
+\subsection{Adaptive Large Neighborhood Search (ALNS)}
+\textbf{!!! REPHRASE} ALNS is designed to solve optimization problems by iteratively destroying and repairing solutions. While traditional methods offer precise formulations, they struggle with scaling and flexibility in real-world data scenarios. In our project, ALNS was found to deal with our optimization problem better.
 
 \section{Problem Definition}
 In this paper, we propose My Travel Itinerary Buddy – Automatic Itinerary (MITB – AI), where the goal is to generate multi-day travel itinerary for a tourist visiting Singapore, consisting of a sequence of POIs – including both attractions and hawker centres. This is also subjected to user-defined constraints (e.g. budget, number of days and person types) while optimizing for the following objectives: (1) minimize costs, (2) minimize travel time, and (3) maximize traveler’s satisfaction from online ratings. This problem can be classified as a multi-objective combinatorial optimization task, where the system must select and order POIs over multiple days while satisfying both hard and soft constraints (Fan, et al., 2024).
@@ -135,43 +155,24 @@ The assumptions that we have incorporated in our itinerary planners includes:
 \subsection{Route Matrix Generation using Google Maps API}
 To support accurate travel time estimation between POIs, we constructed a route matrix using Google Maps API.
 
-\section{Contribution}
-\textbf{!!! HELP THIS SECTION}.  Not to rely on outdated city census data
-Domain expert view (pre-selection) not possible for large scale comparison and large n
-since it is continuous, it is not possible to find by manual methods (scalable) and need a smart way of approximation
-many applications
-
-\section{Case Study}
+\section{Demonstration Scenarios}
 TBA
 
-\section{Proposed Approach}
-\subsection{LLM and Multi-Agent Framework}
-\textbf{!!! SHORTEN} Although LLMs are highly capable at interpreting and generating human-like text, they are passive systems—limited to single-turn type of interaction without persistent memory. This presents clear limitations when applied to travel itinerary planning, a task that requires structured decision-making, retrieval of external data (e.g., Google ratings, Cost of Attraction Entrance Fees), and context tracking across multiple steps. A passive LLM may generate a generic itinerary but lacks the capability to provide personalization such as “I prefer scenic routes” or “maximize shopping time within budget.”
-
-To bridge this gap, we extend LLMs into autonomous agents by integrating three key capabilities: tool-calling (e.g., invoking Google Maps APIs), memory (to retain user goals and prior decisions), and Retrieval Augmented Generation (RAG) for incorporating external data into the reasoning process. This turns the LLM from a reactive text generator into a goal-driven planner capable of making informed decisions. Our system adopts this Agentic RAG architecture to retrieve attraction details, estimating hawker visit durations, and enrich itinerary planning with contextual knowledge beyond the LLM’s static knowledge from pre-training.
-
-While a single agent can technically handle the entire itinerary pipeline, research has also shown that such monolithic setups often struggle with domain specialization. To address the limitation, we extend our architecture into a multi-agent framework where each agent focuses on a well-scoped domain task.
-
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=1\linewidth]{6098288248590812104.jpg}
-    \caption{Multi-Agent Architecture}
-    \label{fig:Workflow Diagram}
-\end{figure}
-
-\subsection{Adaptive Large Neighborhood Search (ALNS)}
-\textbf{!!! REPHRASE} ALNS is designed to solve optimization problems by iteratively destroying and repairing solutions. While traditional methods offer precise formulations, they struggle with scaling and flexibility in real-world data scenarios. In our project, ALNS was found to deal with our optimization problem better.
-
-\section{Experimental Result}
-TBA
-
+\section{Deployment / Impact / Maturity}
+- deployment status
+- real users and stakeholders
+- performance metrics and evaluations
 \textbf{!!! try to use \url{https://arxiv.org/pdf/2402.01622} for the benchmark}
 narratives:
 1. agentic + alns is better than alns only and llm only
 2. for feedback, compare 2B 2C 2D.
     - ideally: 2d is best, but slowest
 
+
 \section{Conclusion}
+TBA
+
+\section{Future Work}
 TBA
 
 % For instructions on how to submit your work to ECAI and on matters such 
